[gd_scene load_steps=3 format=3 uid="uid://dn087ulv26701"]

[ext_resource type="Script" path="res://Scripts/ObjectScripts/ItemSwitcher.gd" id="1_fge0x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vk66y"]
size = Vector2(32, 32)

[node name="ItemSwitcher" type="Node2D"]
script = ExtResource("1_fge0x")

[node name="ItemSwitcherArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemSwitcherArea"]
shape = SubResource("RectangleShape2D_vk66y")

[node name="SwordCollect2" type="AnimatedSprite2D" parent="."]

[node name="RocketBoostCollect2" type="AnimatedSprite2D" parent="."]

[node name="GrappleCollect2" type="AnimatedSprite2D" parent="."]

[node name="ArmGunCollect" type="AnimatedSprite2D" parent="."]

[node name="Preview" type="AnimatedSprite2D" parent="."]
